...
    "revoke": "Revoke"
  },
  "testFaqLink": "{{appName}} FAQ",
  "termsOfServiceLink": "Terms of Service",
  "privacyPolicy": "Privacy Policy",
  "editProfile": "Edit Profile",
  "confirmNumber": "Connect phone number",
  "cancel": "Cancel",
  "changeProfilePhoto": "Change Profile Photo",
  "name": "Name",
  "editName": "Edit Name",
  "submit": "Submit",
  "selectLanguage": "Select Language",
...
      "text": "Anyone with your Phrase will have access to your account and all of its funds. Don’t share it with others."
    }
  ],
  "consumerIncentivesTitle": "Get started with Supercharge",
  "consumerIncentivesSummary": "Supercharge is here! Get {{percent}}% annual rewards on your highest stablecoin balance (cUSD, cEUR, or cREAL). Available for a limited time. Here's how it works:",
  "earnWeekly": {
    "header": "Connect your phone number",
    "text": "Tap Connect Number if you haven't connected it yet."
  },
  "noMinCommitment": {
    "header": "Add a minimum balance",
    "earningText": "Receive rewards on 10-1000 cUSD, 10-1000 cEUR, or 50-6000 cREAL.",
    "connectText": "Just have a balance of at least {{minBalance}} {{currency}} and connect your phone number to start getting rewarded."
...
  "superchargeDisclaimer": "Max-out rewards by adding up to {{amount}} {{token}}",
  "superchargeDisclaimerMaxRewards": "You’re getting maximum rewards on your {{token}}",
  "superchargeDisclaimerDayLimit": "Your rewards must be claimed within 28 days. <0>Learn more</0>",
  "superchargeTokenDetailsDialog": {
    "title": "Which assets can I Supercharge?",
    "body": "You’ll get rewarded weekly on your Celo stablecoin with the highest value (cEUR, cUSD, cREAL).",
    "dismiss": "Dismiss"
  },
  "superchargingTitle": "Your {{token}} is being Supercharged",
  "superchargingDescription": "You’re getting {{apy}}% annually. Every week you'll get a notification when your rewards are ready, come back here to claim them.",
  "superchargeRewardsAvailable": "You have {{amount}} {{token}} available to claim!",
  "superchargeRewardsAvailableMultipleTokens": "You have {{amounts}} available to claim!",
  "superchargeClaimText": "Claim your rewards to add them to your balance.",
...
  "adjustYourClock": "Set the correct time or adjust your clock to read time automatically.",
  "adjustDate": "Adjust Date",
  "connect": "Connect",
  "save": "Save",
  "scan": "Scan",
  "next": "Next",
  "skip": "Skip",
  "copy": "Copy",
  "goBack": "Go Back",
  "reset": "Reset",
  "done": "Done",
  "tip": "Tip: ",
  "warning": "Warning ",
  "downloadRewards": "Download Celo Rewards",
  "wallet": "Wallet",
...
  "providerRateFetchFailed": "Could not fetch provider rate. You can continue without a prefilled rate.",
  "helpFindAccount": "Help your contact find their Account Address",
  "close": "Close",
  "home": "Home",
  "accountKey": "Recovery Phrase",
  "addAndWithdraw": "Add & Withdraw",
  "settings": "Settings",
  "help": "Help",
  "dismiss": "Dismiss",
  "review": "Review",
  "insufficientBalance": "Your balance is too low to make this transaction",
  "amount": "Amount",
  "currentBalance": "Current Balance (cUSD)",
...
    "card1": "To make sure your phone number is really yours, we're sending you three messages.",
    "card2": "Once your number is confirmed, you can send and receive funds easily to your phone number.",
    "card3": "Confirming also allows you to see which of your friends are on {{appName}}.",
    "card4": "We require three confirmation messages to keep your account more secure."
  },
  "skipModal": {
    "header": "Are you sure?",
    "body1": "Connecting your number gives you more ways to send payments and allows you to collect Supercharge rewards."
  },
  "failModal": {
    "header": "Confirmation Error",
    "body1": "An issue has occurred while confirming your phone number.",
    "body2": "You can skip confirmation for now and try again later.",
...
  },
  "verificationEducation": {
    "title": "Phone Number",
    "header": "Connect your phone number",
    "body": "To make sure your number is really yours, we’re going to send you three messages that will cost about 0.05 cUSD each.\n\nConfirming your number takes about three minutes.",
    "feelessBody": "Connecting takes about three minutes. To confirm your number, you’ll receive three messages.",
    "start": "Start",
    "resume": "Resume",
    "doINeedToConfirm": "Do I need to confirm?",
    "skipForNow": "Skip for now",
    "bodyInsufficientBalance": "Your current balance is not high enough to complete the confirmation process.\n\nPlease try again when you have added funds to your wallet.",
    "bodyAlreadyVerified": "Your number is already confirmed!"
  },
  "verificationSkipDialog": {
    "title": "Are you sure?",
    "body": "Confirming allows you to send and receive funds easily to your phone number.\n\nUnconfirmed accounts can only send payments using Celo addresses or QR codes.",
...
